syntax = "proto3";

package likes_service.v1;

service LikesService {
  rpc likeAPost(LikeOrUnlikeAPostRequest) returns (EMPTY) {}
  rpc unlikeAPost(LikeOrUnlikeAPostRequest) returns (EMPTY) {}
  rpc isPostLiked(LikeOrUnlikeAPostRequest) returns (IsPostLikedResponse) {}
}





message PostLikeEntity {
 string id = 0;
 string userId = 2;
 int32 createdAt = 3;
 string postId = 4;
}


message EMPTY {}


message LikeOrUnlikeAPostRequest {
  string userId = 0;
  string postId = 1;
}

message IsPostLikedResponse {
  bool isLiked = 0;
}