export * from './lib/proto/usersService';
export *  from './lib/proto/postsService';
export * from './lib/interfaces/IUser.interface'
export * from './lib/dto/editProfileData.dto';


export * from './lib/interfaces/IPost.interface';

export *  from './lib/interfaces/ILike.interface';
export *  from './lib/proto/likesService';